--- a/What The Fox Say/What The Fox Say.csproj
+++ b/What The Fox Say/What The Fox Say.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Animal.cs" />
     <Compile Include="Bird.cs" />
     <Compile Include="Cat.cs" />
+    <Compile Include="InputDecoder.cs" />
     <Compile Include="Cow.cs" />
     <Compile Include="Dog.cs" />
     <Compile Include="Elephant.cs" />
