--- a/What The Fox Say/What The Fox Say.csproj
+++ b/What The Fox Say/What The Fox Say.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Fish.cs" />
     <Compile Include="Fox.cs" />
     <Compile Include="Frog.cs" />
+    <Compile Include="Mouse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seal.cs" />
